--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
       </div>
 
       <!-- Header -->
-      <header id="header">
-        <a
-          href="index.html"
-          class="logo icon solid solo fa-arrow-up scrolly"
-        ></a>
-      </header>
-
       <!-- Nav -->
       <nav id="nav">
         <ul class="links">
-          <li class="active"><a href="index.html">Projects</a></li>
+          <li class="active"><a>Projects</a></li>
         </ul>
         <ul class="icons">
+          <li>
+            <button
+              onclick="location.href='images/Andrej Atanasovski - CV.pdf';"
+            >
+              My CV
+            </button>
+          </li>
           <li>
             <a
               href="https://www.linkedin.com/in/andrej-atanasovski-a2000/"
@@ -84,6 +84,11 @@
             class="image main"
             ><img src="images/Netflix Clone.png" alt=""
           /></a>
+          <p class="netflix_clone_p">
+            It is a Movies Website made with TMDB (The Movie Database) API,
+            where the movies are divided into subcategories, and you can watch
+            trailers of those movies.
+          </p>
           <ul class="actions special">
             <li>
               <a
@@ -100,8 +105,7 @@
           <article>
             <header>
               <h2>
-                <a href="https://github.com/aatanasovskii/REACT_MoviePlaylist-"
-                  >Project 1:<br />
+                <a href="https://github.com/aatanasovskii/REACT_MoviePlaylist-">
                   Movie Playlist</a
                 >
               </h2>
@@ -134,7 +138,7 @@
               <h2>
                 <a
                   href="https://github.com/aatanasovskii/Machine-Learning---Sales-Prediction"
-                  >Project 2:<br />
+                >
                   Machine Learning Project for Predicting Sales
                 </a>
               </h2>
@@ -169,8 +173,34 @@
           <article>
             <header>
               <h2>
-                <a href="https://github.com/aatanasovskii/Weather-App"
-                  >Project 3:<br />
+                <a href="https://github.com/aatanasovskii/FightingGame">
+                  Fighting Game
+                </a>
+              </h2>
+            </header>
+            <a
+              href="https://github.com/aatanasovskii/FightingGame"
+              class="image fit"
+              ><img src="images/Fighting Game.png" alt=""
+            /></a>
+            <p>
+              Fighting Game - You can Attack the opponent and Heal yourself,
+              let's see who wins?
+            </p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/aatanasovskii/FightingGame"
+                  class="button"
+                  >Check it out!</a
+                >
+              </li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <h2>
+                <a href="https://github.com/aatanasovskii/Weather-App">
                   Weather App</a
                 >
               </h2>
@@ -197,8 +227,7 @@
           <article>
             <header>
               <h2>
-                <a href="https://github.com/aatanasovskii/TipCalculator"
-                  >Project 4:<br />
+                <a href="https://github.com/aatanasovskii/TipCalculator">
                   Tip Calculator</a
                 >
               </h2>
@@ -224,7 +253,7 @@
               <h2>
                 <a
                   href="https://github.com/aatanasovskii/Rock_Paper_Scissors-Game"
-                  >Project 5:<br />
+                >
                   Rock Paper Scissors - Game</a
                 >
               </h2>
@@ -253,7 +282,7 @@
               <h2>
                 <a
                   href="https://github.com/aatanasovskii/Machine-Learning-Models"
-                  >Project 6:<br />
+                >
                   My Machine Learning Projects
                 </a>
               </h2>
@@ -287,7 +316,9 @@
         <section class="split contact">
           <section>
             <h3>Email</h3>
-            <p><a href="#">andrej.atanasovski.00@gmail.com</a></p>
+            <a href="mailto:andrej.atanasovski.00@gmail.com"
+              >andrej.atanasovski.00@gmail.com</a
+            >
           </section>
           <section>
             <h3>Social</h3>
