--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
         <!-- Featured Post -->
         <article class="post featured">
           <header class="major">
-            <p>A SHOWCASE OF MY PROJECTS AND MY ABILITIES!</p>
             <h2>
               <a>My name is Andrej Atanasovski</a>
             </h2>
-            <p>Here are some projects I have made.</p>
+            <p>Here is a showcase of some projects I have made.</p>
           </header>
           <h2>
             <a href="https://github.com/aatanasovskii/Netflix_Clone-project"
