--- a/index.html
+++ b/index.html
@@ -104,6 +104,37 @@
           <article>
             <header>
               <h2>
+                <a href="https://github.com/aatanasovskii/meetups-react-app">
+                  React Meetup App
+                </a>
+              </h2>
+            </header>
+            <a
+              href="https://github.com/aatanasovskii/meetups-react-app"
+              class="image fit"
+              ><img src="images/ReactApp_Meetups.png" alt=""
+            /></a>
+            <p>
+              An interactive website made with React.js where all the react core
+              features are used in building this App. It uses a Firebase
+              Database, in which you can add a meetup and with Post Request it
+              will be saved in Firebase, where all the meetups are saved and you
+              can view all your meetups. There is also My Favorites Component
+              where you can view all of your marked favorite meetups.
+            </p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/aatanasovskii/meetups-react-app"
+                  class="button"
+                  >Check it out!</a
+                >
+              </li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <h2>
                 <a href="https://github.com/aatanasovskii/REACT_MoviePlaylist-">
                   Movie Playlist</a
                 >
