--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <a
             href="https://github.com/aatanasovskii/Netflix_Clone-project"
             class="image main"
-            ><img src="images/Netflix Clone.png" alt=""
+            ><img src="images/Netflix%20Clone.png" alt=""
           /></a>
           <p class="netflix_clone_p">
             It is a Movies Website made with TMDB (The Movie Database) API,
@@ -101,6 +101,35 @@
 
         <!-- Posts -->
         <section class="posts">
+            <article>
+                <header>
+                    <h2>
+                        <a href="https://github.com/aatanasovskii/shopping-app-vuejs">
+                            Vue.js Shopping App
+                        </a>
+                    </h2>
+                </header>
+                <a
+                        href="https://github.com/aatanasovskii/shopping-app-vuejs"
+                        class="image fit"
+                ><img src="images/shopping-app.png" alt=""
+                /></a>
+                <p>
+                    The shopping app website made with Vue.js is a dynamic and responsive website that utilizes
+                    many of Vue.js's core features such as Vuex and Vue Router. The app allows users to browse
+                    products from various categories and manage their shopping cart.
+                    Also, the admin can create new Products and Categories.
+                </p>
+                <ul class="actions special">
+                    <li>
+                        <a
+                                href="https://github.com/aatanasovskii/shopping-app-vuejs"
+                                class="button"
+                        >Check it out!</a
+                        >
+                    </li>
+                </ul>
+            </article>
           <article>
             <header>
               <h2>
@@ -143,7 +172,7 @@
             <a
               href="https://github.com/aatanasovskii/REACT_MoviePlaylist-"
               class="image fit"
-              ><img src="images/Project 1 - My Movie Playlist.png" alt=""
+              ><img src="images/Project%201%20-%20My%20Movie%20Playlist.png" alt=""
             /></a>
             <p>
               This is one of the best projects I have made! It is an interactive
@@ -211,7 +240,7 @@
             <a
               href="https://github.com/aatanasovskii/FightingGame"
               class="image fit"
-              ><img src="images/Fighting Game.png" alt=""
+              ><img src="images/Fighting%20Game.png" alt=""
             /></a>
             <p>
               Fighting Game - You can Attack the opponent and Heal yourself,
@@ -238,7 +267,7 @@
             <a
               href="https://github.com/aatanasovskii/Weather-App"
               class="image fit"
-              ><img src="images/Weather app.png" alt=""
+              ><img src="images/Weather%20app.png" alt=""
             /></a>
             <p>
               Simple project that shows you the weather forecast in a city. Made
@@ -265,7 +294,7 @@
             <a
               href="https://github.com/aatanasovskii/TipCalculator"
               class="image fit"
-              ><img src="images/Tip Calculator.png" alt=""
+              ><img src="images/Tip%20Calculator.png" alt=""
             /></a>
             <p>Simple calculator for calculating tips using JavaScript.</p>
             <ul class="actions special">
@@ -291,7 +320,7 @@
             <a
               href="https://github.com/aatanasovskii/Rock_Paper_Scissors-Game"
               class="image fit"
-              ><img src="images/Rock Paper Scissors Game.png" alt=""
+              ><img src="images/Rock%20Paper%20Scissors%20Game.png" alt=""
             /></a>
             <p>
               Rock Paper Scissors Game against the Computer. Made with
@@ -320,7 +349,7 @@
             <a
               href="https://github.com/aatanasovskii/Machine-Learning-Models"
               class="image fit"
-              ><img src="images/Machine Learning.jpg" alt=""
+              ><img src="images/Machine%20Learning.jpg" alt=""
             /></a>
             <p>
               Here are some of the Machine Learning Prediction models I have
